--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="uMlatrK3Zcc7Dcp7iENidSnGvaRoNie621WuMK9HSMPKrv0vORkgJlvpZ7/zgKWuGH+kq3qqEw2DsKi3cE6DGlODdpy4lpdGAIh60yI4IxSfqxM4bvyvL9U++ckd1UXg">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4sufe0aL40/eSg34PqOwnxUpU8Rvgck5FX1nGFT//gieuGuBuL4AStHMqRlfVk9qX5U1EYDS618XuODff4EswmdAQoDRbV7iuYyM7biwDhqVCkVWtpMGs0reQr54i7iL">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
