--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
             </div>
             <div class="col-md-6">
                 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4Uvf4cH5c1XVFWMnE6sSJC7YCuxic3VTKLx8yEe2Evuf6t+6u5WGMkdEJmgiGzAbkaV5bFKF1q9zY/YTRG8Dig/uD4N2VVOf9oRNXsNkqrgvGUR5NIKSkKJNlBuFSmHh">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FRHZPYH7I1IGVOve/P+L4m3HATEXd7mkSn2BwxFNKkgbKhqgKdGXTcvKDRMkAb9Bhv4rCCL3R3cjp+0rZ0uDLBwZVlsd5FeSne9FnOJp7B29YZpF8yVzxJHJ5Bfn9NAU">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
@@ -348,7 +348,7 @@ in<br>Home, Auto &amp; Commercial Insurance</p>
                     <div class="card-box pb-md-5">
                         <h4 class="card-title mbr-fonts-style display-5"><strong>
                             Doug Jones</strong></h4>
-                        <p class="mbr-text mbr-fonts-style display-4">Licensed Agent &amp; Marketing Director</p>
+                        <p class="mbr-text mbr-fonts-style display-4">Licensed Agent &amp; Marketing Director<br><br></p>
                         <!--Btn-->
                         <div class="mbr-section-btn align-left"><a href="doug.html" class="btn btn-primary display-4">
                                 Contact Doug</a></div>
@@ -359,13 +359,13 @@ in<br>Home, Auto &amp; Commercial Insurance</p>
             <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/blank-700x467.png" alt="Mobirise" title="">
+                        <img src="assets/images/daniel-kunkel-700x995.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box pb-md-5">
-                        <h4 class="card-title mbr-fonts-style display-5">&nbsp; &nbsp;&nbsp;</h4>
-                        <p class="mbr-text mbr-fonts-style display-4">&nbsp; &nbsp;&nbsp;<br><br></p>
+                        <h4 class="card-title mbr-fonts-style display-5"><strong>Daniel Kunkel</strong></h4>
+                        <p class="mbr-text mbr-fonts-style display-4">&nbsp; &nbsp;Licensed Agent Specializing in<br>Commercial Insurance<br></p>
                         <!--Btn-->
-                        <div class="mbr-section-btn align-left"><a href="doug.html" class="btn btn-secondary display-4">&nbsp; &nbsp; &nbsp;</a></div>
+                        <div class="mbr-section-btn align-left"><a href="Daniel.html" class="btn btn-primary display-4">Contact Daniel</a></div>
                     </div>
                 </div>
             </div>
