--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4sufe0aL40/eSg34PqOwnxUpU8Rvgck5FX1nGFT//gieuGuBuL4AStHMqRlfVk9qX5U1EYDS618XuODff4EswmdAQoDRbV7iuYyM7biwDhqVCkVWtpMGs0reQr54i7iL">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ru/P4FcYAdF2kzMKLUIBObBYT9sn+vLMo9qFueBfKLMf6P/+RPN9mc/icXxf1hBf+25h2oHnixsIa5JlJqi2/aBnFKWbakl0BwJx47mzjDqhSgNAdvgkfUe/FD1JeMtI">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
