--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ox/5DVK55arbRWRuffIP5sm8hfdDJ4O4yRHiDIqfiED/KHRt0FsGhb8SBho0SpdKytRJoYyKd+VrZxzo5/u1neNpEKvPQB+TZbKgT7dZfs4DhSHDghPU32chvVLGgmFR">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EVzY43JLPpSZOCyK6CH7C1i7BDr7n3zFp2KbWVHDfMLnYI/3UrIZqkWbArc7QJq4Lx0tiLPKDFN/tDARfg+1BGZY0wsGr36c/OHH02VDpYvOCJR/oZ0j+Ey+4bKitpwY">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
