--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 34%;">
-                <img src="assets/images/sowae-2019-626x783.jpg" alt="Mobirise" title="">
+                <img src="assets/images/kelsey-town-october-25-sowae-434x772.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,12 +182,17 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Hayden James!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Kelsey Town!
 <br>
-<br>Hayden is a senior at Jonesville High School. He is a drum major for the JHS Marching Band. He also remains active on the Track &amp; Field and Cross Country teams, National Honor Society, and the Quiz Bowl team.
-<br><br>According to JHS Science teacher, Josh Perrin, and History teacher, Pete Konieczki, “Hayden is the epitome of a well-rounded student. He exfels in the classroom, in the band and in cross country, while managing leadership positions in each. He is a responsible and respectable young man, who is a genuine mentor to his peers.”
-<br><br>Hayden plans to attend the University of Michigan to study political science. 
-<br><br>Congratulations, Hayden. Keep up the great work!<br></p>
+<br>Kelsey is a senior at North Adams-Jerome High School (NAJHS). She remains active in Student Council, Future Farmers of America and as a member of the Volleyball and Basketball teams. 
+<br>
+<br>According to NAJHS English &amp; Art teacher, Karen Christiansen,“Kelsey is always willing to take on more responsibilities and dive head first into leadership roles. She sees what she wants and goes for it both inside and outside of the classroom.”
+<br>
+<br>Kelsey plans finish Hillsdale County Early Middle College, move to Florida, and pursue a career in Marine Biology, following graduation. 
+<br>
+<br>Congratulations, Kelsey!
+<br>
+<br>Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -217,7 +222,7 @@
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
