--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section content5 cid-r6QjpLxZrY" id="content5-50">
 
     
 
@@ -125,7 +125,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAEIpgj38KyLFELm2bK9Y7krBkz1K-cMq8&amp;q=place_id:ChIJu45q-rhtPYgRx17KrfbYIwQ" allowfullscreen=""></iframe></div>
+                <div class="google-map"></div>
             </div>
             <div class="col-md-6">
                 
@@ -141,7 +141,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="FRHZPYH7I1IGVOve/P+L4m3HATEXd7mkSn2BwxFNKkgbKhqgKdGXTcvKDRMkAb9Bhv4rCCL3R3cjp+0rZ0uDLBwZVlsd5FeSne9FnOJp7B29YZpF8yVzxJHJ5Bfn9NAU">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="N8EpSygZCethCRwo4CyULPJFH3YybK9hGx/M/Z0LVH+I8ydvh5AW78dyoFHnR/qbE/4kcUOZXodbQTvnV/TyH1G7v88sA7rhJsJmdiXDW1lFIQY5SRTyPi2i1W16KxXz">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-1x">
