--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EOZSpOYj+oM7oVzY1e9MkXrjZ1vfIdFy0O7jfd1Pwr4Xo/NO6Msw+wDXcVGHnQWmPbE1JbW4c+nn9PNG6udFZZvsnaJVSfkcw1rDdEmWeSsO65TeUGZnZ76GT1HS71f4">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5xnBDSUN8I+2g87Gsc2f/q2w09EAyUTGp4GkEUg0uuTfxcJPHuKTKRvpGylCNUsY87cIK8mBMXK4AK7sea8hdwe8FZfVagJ6MTZ1cwWXhVwhS+GRR5lc91RjS34ZAYjr">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
