--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -165,7 +165,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 34%;">
-                <img src="assets/images/november-1-sowae-2019-phs-626x713.jpg" alt="Mobirise" title="">
+                <img src="assets/images/november-8-2019-sowae-maci-svacha-wca-626x898.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,21 +182,13 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Dakota Black!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Maci Svacha!
 <br>
-<br>Dakota is a senior at Pittsford High School (PHS). He remains active in Pittsford High School’s Farming program as well as on the Robotics Team . 
+<br>Maci is a senior at Will Carleton Academy (WCA). She remains active in Student Council, where she currently serves as its co-President. She also remains active in National Honor Society, Volleyball, and Trap Shooting. Maci also volunteers at Crossroads Farm and at Hillsdale Hospital. <br>
+<br>According to WCA High School Science teacher, Jason Coward, “[Maci] works tirelessly to promote the school and its successes to others. She is dedicated to success in the classroom. She is an exceptional athlete and a strong leader at school.” <br>
+<br>Maci plans to attend Spring Arbor University to study nursing following graduation.
 <br>
-<br>
-<br>According to PHS Math teacher, Mr. Brown, “Dakota is inquisitive, thorough, and self-motivated.  His work in Probability &amp; Statistics is excellent, and his answers go above and beyond as he provides a complete explanation for his answers.” 
-<br>
-<br>
-<br>Once Dakota completes the Hillsdale County Early Middle College program, he plans to pursue a degree in Agricultural Technology and/or Diesel Technology.  He would like to continue farming and operate his own business one day, focusing on diesel mechanics, trucking, and more.
-<br>
-<br>
-<br>Congratulations, Dakota! 
-<br>
-<br>
-<br>Keep up your great work<br></p>
+<br>Congratulations, Maci! &nbsp;Keep up the great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -226,7 +218,7 @@
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
