--- a/doug.html
+++ b/doug.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html web templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section content5 cid-r6QgeW9ZBr" id="content5-4v">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="J4YOqAwoS9+9Y5XQwcBwd9odqWeUkPG8eDyD+Y4DhOARemJDsQh3dz9PLsVzOLCe8RbpV0Q7Csewe9fEb71I/uuxTpzaSCwCrX5gOjj7AGES3LbS8zm4Zp6GUPjzlv+L">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="M4snAmyKV+qG87C2NPe2PL4/ZayY8hWednfDJMNXVylYovjwIa8/hxkfwBm7ubPAATCF7l1WaF4Ki4LoycFWhPNje1KJYwd2tJzWu/aXEV4X96cXmEw4gTi3bhXJaJdA">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
