--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">free html templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0mwFRPSFIUnAj4KUUNfKehoogEt15iZX8Jiqe+40ppLBaROkDoJAL0Xu/mvH+J7haO9UhBZI6AWh4NC/BZhyXuXtLGu5+AfwQ1w7ts5vaj7DVElatkk/TmSd2gHWnvXy">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jzIkUJrulswJXGuc4hzM6UtsQG0XFPMaTFTxffCMrqHAooDcS1YkWj67894xfY3c3fhipsx9BzzTbNbkqToYEWwXj39/aRLGKtsG0HZw10yGJyPrxK9BO9OFDLq4VbCW">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
