--- a/Daniel.html
+++ b/Daniel.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section content5 cid-r6QfR6Kv8I" id="content5-4i">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hEKFFPyiCJyNeJ5gmvG3qQCCHZ2loy3aF4sbiY3RA7AuUIzii+PIFz31ESAR3t2vKTYzZrEat/pqEu1d0Jgbi10NXgkRjEoYje8RAxHXZyCXrCU8lscocvpIgegOsrtr">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pjbc/CV3eAU2rnUEncjPott9wuz4t+orOqQm9DXaQYn5ToRegUU3EpIr5Tnov0heTLKEw04xwdD7E64szxydGZCRmDzfYze+x+stlJb5XVp+cGYpk7NuXV57TEO8moOk">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
