--- a/community.html
+++ b/community.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website creator</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-r6QfFWP5mD" id="content5-4d">
 
     
 
@@ -164,8 +164,8 @@
         
 
         <div class="media-container-row mt-5 pt-3">
-            <div class="mbr-figure" style="width: 34%;">
-                <img src="assets/images/november-8-2019-sowae-maci-svacha-wca-626x898.jpg" alt="Mobirise" title="">
+            <div class="mbr-figure" style="width: 24%;">
+                <img src="assets/images/74450535-3148195921917674-774631191880925184-n-172x228.jpg" alt="Mobirise" title="">
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -182,13 +182,13 @@
                     <div id="tab1" class="tab-pane in active" role="tabpanel">
                         <div class="row">
                             <div class="col-md-12">
-                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Maci Svacha!
+                                <p class="mbr-text py-5 mbr-fonts-style display-7">Congratulations to this week’s Barrett Insurance Student of the Week Award of Excellence recipient, Hannon Attareb!
 <br>
-<br>Maci is a senior at Will Carleton Academy (WCA). She remains active in Student Council, where she currently serves as its co-President. She also remains active in National Honor Society, Volleyball, and Trap Shooting. Maci also volunteers at Crossroads Farm and at Hillsdale Hospital. <br>
-<br>According to WCA High School Science teacher, Jason Coward, “[Maci] works tirelessly to promote the school and its successes to others. She is dedicated to success in the classroom. She is an exceptional athlete and a strong leader at school.” <br>
-<br>Maci plans to attend Spring Arbor University to study nursing following graduation.
+<br>Hannon is a 9th grade student at Waldron High School (WHS). She remains active in Future Farmers of America (FFA) and on the track team. The Board of Education also recognizes Hannon as a, “Spartan Star.”
+<br><br>According to FFA Advisor and Agricultural Science teacher, Margo Fether, “Hannon is a member of the Waldron FFA and serves as the FFA student advisor. Hannon is a hard working individual that goes above and beyond what is expected to help others be successful. Hannon always has a bright smile and is willing to lend a hand. She has been placed on the honor roll list for quarter one!”
 <br>
-<br>Congratulations, Maci! &nbsp;Keep up the great work.<br></p>
+<br>Hannon plans to attend college to pursue a nursing degree following graduation.
+<br><br>Congratulations, Hannon! <br><br>Keep up your great work.<br></p>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                                 <p class="mbr-text py-5 mbr-fonts-style display-7"><strong>(in alphabetical order by first name) 
 </strong><br>
 <br>Adrianna Aemisegger<br>Alexis Higgins<br>Allyson Rubley,  
-<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
+<br>Alyssa Forbes<br>Alyssa Phillips<br>Angelee Coleman<br>Ashley Stead<br>Ashley Terpening<br>Bailey Cramer<br>Blaine Randall<br>Brandon Jagielski<br>Breanna Hardin<br>Caleb Brink<br>Carter Riley<br>Cecilia Mende<br>Ciara Smalls<br>Craig Court<br>Dakota Black<br>Dale Wagner<br>Gabe Healy<br>Georgia McDowell<br>Grace Gadwood<br>Grace Ollinger<br>Gracie Cook<br>Gracie Lamb<br>Hanna Korn<br>Hannon Attareb<br>Hayden James<br>Hayley Sims<br>Hunter Duke<br>Hunter Rubley<br>Jacob Hart<br>Jacob Scoville<br>Jay Close<br>Jena Fellabaum<br>Joey Weidmayer<br>John Nolan<br>Joshua Gray<br>Josh Marsh<br>Julia Haire<br>Justice Geletzke<br>Kaleb Michael<br>Kaleb Voisin<br>Kamren Johnson<br>Kayla Kane<br>Keagan Gimenez<br>Kelsey Town<br>Kendal Cooney<br>Khyra Hickey<br>Kimball Hughes<br>Kristen Mille<br> Lige McKinney<br>Mackenzie Webb<br>Maci Svacha<br>Makayla Percy<br>Malyah Thompson<br>Marshall Mapes<br>Maxim Hayes<br>Michael Jonas<br>Michael Rhoades<br>Montana Gray<br>Nick Gould<br>Olivia Bambacht<br>Olivia Huggett<br>Owen Webb<br>Rachel Mitchell<br>Randal McDowel<br>Rebecca Butters<br>Ryan Reiniche<br>Thomas Hull<br>Timothy Hardway<br>Travis Truitt<br>Zach WIlson</p>
                             </div>
                         </div>
                     </div>
