--- a/cyndi.html
+++ b/cyndi.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section content5 cid-r6QfTU8grH" id="content5-4j">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jzIkUJrulswJXGuc4hzM6UtsQG0XFPMaTFTxffCMrqHAooDcS1YkWj67894xfY3c3fhipsx9BzzTbNbkqToYEWwXj39/aRLGKtsG0HZw10yGJyPrxK9BO9OFDLq4VbCW">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VedrrCIEI3WM5BGcs3SHo1hyxlvw0B5Jw9Qp2GxWXB+8EOesCJS9HQNENngXTCwzxZsknJXY5An756axgIQP4Z+niE3NgiwCdTeEFhQYY3yDI9eT7fkuxuoMJP/2JTz1">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
