--- a/frank.html
+++ b/frank.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="mbr-section content5 cid-r6QgitsG48" id="content5-4y">
 
     
 
@@ -156,7 +156,7 @@
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thank you for your e-mail!</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="zADtk6vvubflfIzMYh7HRu7B+gB/dfvxUHy66yk7S6Uv/PIkdKBkhumHCRpCPr/5yD+DQPHUI41xqXZmhfjB5luAGd0pe1gYqgiIIsO965PC6kkDqWZge+GySGHJvm0d">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="tffu3IlapJfI5gVrc8H7Pb+88v7eSNGNQNvKjDrRfVZH5GvkGlRstprPGBcGZo9Akhk6mdjHdryHFdGTVV65IGm1ce1FT0+3QrAtYTuTpxEQgYsmDhiaTO/odXmP72pV">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
